--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <script type="module" crossorigin src="/assets/index.c25016b4.js"></script>
+    <script type="module" crossorigin src="/assets/index.126c933f.js"></script>
   </head>
-  <body style="margin: 0;">
+  <body>
     <div id="root"></div>
     
   </body>
